--- a/config.yaml
+++ b/config.yaml
@@ -9,12 +9,12 @@ dataset:
   temporal_shift: false
 
 model:
-  channels: [2, 8, 16, 32, 48, 64, 80, 96, 112, 128, 256]
-  n_depthwise_layers: 4
-  t_kernel_size: 5
-  detector_head: true
-  detector_depthwise: true
-  norms : mixed # ['mixed', 'all_bn', 'all_gn']
+  # channels: [2, 8, 16, 32, 48, 64, 80, 96, 112, 128, 256]
+  # n_depthwise_layers: 4
+  # t_kernel_size: 5
+  # detector_head: true
+  # detector_depthwise: true
+  # norms : mixed # ['mixed', 'all_bn', 'all_gn']
 
 trainer:
   epochs: 200
