--- a/config_submission.yaml
+++ b/config_submission.yaml
@@ -9,11 +9,11 @@ dataset:
   temporal_shift: true
 
 model:
-  # channels: [2, 8, 16, 32, 48, 64, 80, 96, 112, 128, 256]
-  # n_depthwise_layers: 4
-  # t_kernel_size: 5
-  # detector_head: true
-  # detector_depthwise: false
+  channels: [2, 8, 16, 32, 48, 64, 80, 96, 112, 128, 256]
+  n_depthwise_layers: 4
+  t_kernel_size: 5
+  detector_head: true
+  detector_depthwise: false
 
 trainer:
   epochs: 200
