--- a/config.yaml
+++ b/config.yaml
@@ -13,11 +13,11 @@ model:
   n_depthwise_layers: 4
   t_kernel_size: 5
   detector_head: true
-  #detector_depthwise: true
+  detector_depthwise: true
   norms : mixed # ['mixed', 'all_bn', 'all_gn']
 
 trainer:
   epochs: 200
-  batch_size: 16
+  batch_size: 1
   device: 0
   activity_regularization : 0
